2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        fix word-spacing

        * platform/qt/FontQt.cpp:
        (WebCore::generateComponents):
        (WebCore::Font::width):

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        fix letterspacing and small caps.

        * platform/Font.h:
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::setPlatformFont):
        * platform/qt/FileChooserQt.cpp:
        * platform/qt/FontQt.cpp:
        (WebCore::TextRunComponent::TextRunComponent):
        (WebCore::Font::Font):
        (WebCore::Font::operator=):
        (WebCore::Font::update):
        (WebCore::generateComponents):
        (WebCore::Font::selectionRectForText):
        * platform/qt/RenderThemeQt.cpp:

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        store the metrics and space width in the Font object

        * platform/Font.h:
        * platform/qt/FontQt.cpp:
        (WebCore::Font::Font):
        (WebCore::Font::drawText):
        (WebCore::Font::width):
        (WebCore::Font::isFixedPitch):
        (WebCore::Font::ascent):
        (WebCore::Font::descent):
        (WebCore::Font::lineSpacing):

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        simplify some codepaths

        * platform/qt/FontQt.cpp:
        (WebCore::Font::drawText):
        (WebCore::Font::width):

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        fix copyright header

        * platform/qt/FontQt.cpp:

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        correctly load fonts when a list of font families is given

        * platform/qt/FontQt.cpp:
        (WebCore::Font::Font):

2007-06-21  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        fix some more of the font support

        * platform/qt/FontQt.cpp:
        (WebCore::Font::drawText):